--- a/views/rental/create-rental.ejs
+++ b/views/rental/create-rental.ejs
@@ -181,4 +181,4 @@
     </div>
 </div>
 
-<% script = '<script src="/js/api/rentalApi.js"></script><script src="/js/api/vehicleApi.js"></script><script src="/js/api/customerApi.js"></script><script src="/js/pages/rental-add.js"></script>' %>
+<% script = '<script src="/js/lib/searchable-select.js"></script><script src="/js/api/rentalApi.js"></script><script src="/js/api/vehicleApi.js"></script><script src="/js/api/customerApi.js"></script><script src="/js/pages/rental-add.js"></script>' %>
