--- a/views/rental/edit-rental.ejs
+++ b/views/rental/edit-rental.ejs
@@ -101,4 +101,4 @@
     </div>
 </div>
 
-<% script = '<script src="/js/api/rentalApi.js"></script><script src="/js/api/vehicleApi.js"></script><script src="/js/api/customerApi.js"></script><script src="/js/pages/rental-edit.js"></script>' %>
+<% script = '<script src="/js/lib/searchable-select.js"></script><script src="/js/api/rentalApi.js"></script><script src="/js/api/vehicleApi.js"></script><script src="/js/api/customerApi.js"></script><script src="/js/pages/rental-edit.js"></script>' %>
