--- a/views/partials/staff_sidebar.ejs
+++ b/views/partials/staff_sidebar.ejs
@@ -58,7 +58,13 @@
                 </a>
             </li>
             <li>
-                <a href="<%= typeof basePath !== 'undefined' ? basePath : '/owner' %>/expense">
+                <a href="<%= typeof basePath !== 'undefined' ? basePath : '/staff' %>/invoice/list">
+                    <iconify-icon icon="hugeicons:invoice-03" class="menu-icon"></iconify-icon>
+                    <span>Invoices</span>
+                </a>
+            </li>
+            <li>
+                <a href="<%= typeof basePath !== 'undefined' ? basePath : '/staff' %>/expense/list">
                     <iconify-icon icon="mdi:cash-multiple" class="menu-icon"></iconify-icon>
                     <span>Expenses</span>
                 </a>
