--- a/views/rental/view-rental.ejs
+++ b/views/rental/view-rental.ejs
@@ -16,4 +16,4 @@
     </div>
 </div>
 
-<% script = '<script src="/js/api/rentalApi.js"></script><script src="/js/pages/rental-view.js"></script>' %>
+<% script = '<script src="/js/api/rentalApi.js"></script><script src="/js/api/invoiceApi.js"></script><script src="/js/pages/rental-view.js"></script>' %>
