--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -37,4 +37,6 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- SweetAlert2 custom theme (alignment, colors, buttons) -->
     <link rel="stylesheet" href="/css/swal-custom.css">
+    <!-- API base URL (Render pe env API_BASE_URL se set hota hai); config.js ise padhta hai -->
+    <meta name="api-base-url" content="<%= API_BASE_URL || '' %>">
 </head>
